welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value num
      maxi = num(i)
             ^indexOfMaxValue:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 1 to taille-1) {
         ^